# sort

./: CMakeLists.txt  main.c
src/: numbers.txt
